--- a/feedback-module/src/styles/components/_errorAlert.scss
+++ b/feedback-module/src/styles/components/_errorAlert.scss
@@ -13,7 +13,7 @@
 
 .flex-button__alert {
   @extend .order-1;
-  @include mobile-lg("order-initial", "margin-right-1");
+  @include mobile-lg("order-initial", "margin-right-1", "margin-top-0");
 }
 
 .grid-container[dir="rtl"] {
